# SigmaLab

./: .env.example  .gitignore  PH3_Review_Report.md  README.md  pyproject.toml  run_sigmalab_backend.sh
backend/: alembic.ini
docs/: HOWTO_kite_access_token.md  PH2_Review_Report.md  PH3_Review_Report.md  PH4_Optimization_Readiness_Report.md  PH4_Review_Report.md  PH5_Implementation_Plan.md  PH5_Implementation_Report.md  PH6_Implementation_Plan.md  PH6_Implementation_Report.md  PH7_Implementation_Plan.md  PH7_Implementation_Report.md  PH8_Implementation_Plan.md  PH8_Implementation_Report.md  SigmaLab_PRD.md  SigmaLab_Phase_Level_Tasks.xlsx
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
scripts/: kite_access_token_helper.py  test_backtest_engine.py  test_data_engine.py  test_strategy_engine.py
tests/: conftest.py  test_app_boot.py  test_backtest_metrics.py  test_backtest_persistence_integration.py  test_backtest_validation_unit.py  test_broker_settings_service.py  test_builtin_strategies.py  test_candle_aggregator.py  test_candle_cache.py  test_db_scaffold.py  test_health_endpoint.py  test_historical_fetcher.py  test_indicators.py  test_instrument_normalization.py  test_instrument_repo_upsert_batching.py  test_instrument_repo_upsert_statement.py  test_market_data_service.py  test_optimization_job_integration.py  test_optimization_search_space.py  test_ph4_optimization_readiness.py  test_ph7_broker_settings_integration.py  test_ph8_results_endpoints_integration.py  test_postgres_integration.py  test_replay_engine.py  (+8 more)
(+125 files in other folders)
