 
 [build-system]
 requires = ["setuptools>=69", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "sigmalab"
 version = "0.1.0"
 description = "SigmaLab backend foundation (PH1)"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
   "fastapi>=0.115",
   "kiteconnect>=5.0",
   "pandas>=2.2",
   "pydantic>=2.7",
   "pydantic-settings>=2.3",
   "python-dotenv>=1.0",
   "sqlalchemy>=2.0",
   "alembic>=1.13",
   "psycopg[binary]>=3.2",
   "structlog>=24.1",
   "uvicorn[standard]>=0.30",
 ]
 
 [project.optional-dependencies]
 dev = [
   "httpx>=0.27",
   "pytest>=8.2",
 ]
 
 [tool.setuptools]
 package-dir = {"" = "backend"}
 
 [tool.setuptools.packages.find]
 where = ["backend"]
 include = ["app*", "data*"]
 
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
markers = [
  "integration: requires a running PostgreSQL database (SIGMALAB_TEST_DATABASE_URL)",
]
